@@ -954,3 +954,4 @@ category = education
 ubuntu = kstars
 fedora = kdeedu-kstars
 archlinux = kdeedu-kstars
+
