@@ -240,3 +240,10 @@ class Backintime(_apt_install):
     category = 'security'
     ppa = 'bit-team/testing'
     pkgs = 'backintime-gnome'
+
+class Handbrake(_apt_install):
+    'Handbrake'
+    detail = _('Convert video into other forms so they can be viewed on portable devices')
+    category = 'media_editor'
+    ppa = 'stebbins/handbrake-snapshots'
+    pkgs = 'handbrake-gtk'
