@@ -15,6 +15,7 @@
     * Add Geogebra, learning algebra and geometry.
     * Add Celestia, 3D astronomy simulator.
     * Add Kstars, planetarium software.
+    * Add Handbrake, video transformer.
 
 2010-07-26 Homer Xing <homer.xing@gmail.com>
 
